[gd_scene load_steps=7 format=3 uid="uid://cs6b5jgiul2ci"]

[ext_resource type="Texture2D" uid="uid://c305dar51nb07" path="res://resources/spr_tree1.png" id="1_2lg1o"]
[ext_resource type="Script" path="res://Areas/Hutan/Environment/Pohon/pohon.gd" id="1_taq8s"]
[ext_resource type="PackedScene" uid="uid://db26m2afepnbf" path="res://Areas/Hutan/Environment/Api/api.tscn" id="2_tgoya"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_60x50"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yudq5"]
radius = 38.0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_dgi8g"]
polygon = PackedVector2Array(-6, 10, -4, 18, -8, 21, 3, 21, -7, 23, -3, 26, 6, 25, 10, 19, 3, 15, 5, 9)

[node name="Pohon" type="StaticBody2D"]
y_sort_enabled = true
script = ExtResource("1_taq8s")
api = ExtResource("2_tgoya")

[node name="SprTree1" type="Sprite2D" parent="."]
texture = ExtResource("1_2lg1o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 18)
shape = SubResource("RectangleShape2D_60x50")

[node name="Area2D" type="Area2D" parent="." groups=["pohon"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 17
shape = SubResource("CircleShape2D_yudq5")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_dgi8g")

[node name="timer_PenebangKayu" type="Timer" parent="."]
wait_time = 5.0

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-10, 8, 10, 8, 10, 28, -10, 28)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="timeout" from="timer_PenebangKayu" to="." method="_on_timer_penebang_kayu_timeout"]
